--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 <% include carousel.ejs %>
 
 <!---include offers-->
-<% include offer.ejs %>
+<% include offers.ejs %>
 
 <!---include about/clients/projects (acp)-->  
 <% include acp.ejs %>
