--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -7,20 +7,10 @@
 <!---include navbar-->
 <% include navbar.ejs %> 
 
-<!---include carousel-->    
-<% include carousel.ejs %>
 
-<!---include offers-->
-<% include offers.ejs %>
+<!---include gallery_body-->  
+<% include gallery_body.ejs %>   
 
-<!---include about/clients/projects (acp)-->  
-<% include acp.ejs %>
-
-<!---include projects-->
-<% include projects.ejs %>   
-
-<!---include contact-->  
-<% include contact.ejs %>
 
 <!---include social_media-->  
 <% include social_media.ejs %>   
