--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -21,3 +21,4 @@
 #heading{position: absolute; top: 2px; left: 55px;}
 .header_mobile{height: 50px;}
 .navbar-brand{padding: 2px;}
+#gallery_heading{position: relative; top: 50px;}
