--- a/views/gallery_body.ejs
+++ b/views/gallery_body.ejs
@@ -4,7 +4,7 @@
 <div class="row">
 
     <div class="col-lg-12">
-        <h1 class="page-header">Premium Interiors's Gallery</h1>
+        <h1 class="page-header" id="gallery_heading">Gallery</h1>
     </div>
 
     <div class="col-lg-3 col-md-4 col-xs-6 thumb">
