--- a/views/gallery_body.ejs
+++ b/views/gallery_body.ejs
@@ -1,10 +1,9 @@
 <!-- Gallery content -->
-<div class="container">
 
-<div class="row">
+<div class="row container gallery">
 
     <div class="col-lg-12">
-        <h1 class="page-header" id="gallery_heading">Gallery</h1>
+        <h1 class="page-header">Gallery</h1>
     </div>
 
     <div class="col-lg-3 col-md-4 col-xs-6 thumb">
