--- a/views/social_media.ejs
+++ b/views/social_media.ejs
@@ -16,7 +16,7 @@
             <small><a class="padding lightblack" href="#about">Gallery</a>|</small>
             <small><a class="padding lightblack" href="#project">Projects</a>|</small>
             <small><a class="padding lightblack" href="#contact">Contact</a></small>
-            <small><p class="pull-right lightblack">Copyright Premium Interiors @ 2016<a class="lightblack" href="#"><i>ABC</i></a></p></small>
+            <small><p class="pull-right lightblack">Copyright Premium Interiors @ 2016<a class="lightblack" href="#"></a></p></small>
 
     </div>
 </div>
