--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -21,4 +21,5 @@
 #heading{position: absolute; top: 2px; left: 55px;}
 .header_mobile{height: 50px;}
 .navbar-brand{padding: 2px;}
-#gallery_heading{position: relative; top: 50px;}
+.gallery{position: relative; top: 50px; padding-bottom: 80px; text-align: center; margin: auto;}
+.page-header{border: none;}
