--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,8 +13,11 @@
 <!---include offers-->
 <% include offers.ejs %>
 
-<!---include about/clients/projects (acp)-->  
-<% include acp.ejs %>
+<!---include about (acp)-->  
+<% include about.ejs %>
+
+<!---include clients-->  
+<% include clients.ejs %>
 
 <!---include projects-->
 <% include projects.ejs %>   
