--- a/views/acp.ejs
+++ b/views/acp.ejs
@@ -1,38 +1,16 @@
 <div class="container margin-top">
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-        <h3>About Us</h3>
+            <h3>About Us</h3>
 
-        <small><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                magna aliquam erat volutpat.</p></small>
-        <small><p>Ut wisi enim ad minim veniam, quis nostrud exerci tation
-                ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-            </p></small>
-        <small><a class="green" href="#">read more</a></small>
-    </div>
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-
-        <h3>Clients</h3>
-        <small><p><i>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+            <small><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                     sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-                    magna aliquam erat volutpat.Ut wisi enim ad minim veniam, quis nostrud exerci tation
-                    ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat
-                    at vero eros et accumsan et iusto odio dignissim qui.</i></p></small>
-        <small><p><i>by a famous writer</i></p></small>
-    </div>
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-
-        <h3>Projects</h3>
-        <ul>
-            <li><small>Lorem ipsum dolor sit amet</small></li>
-            <li><small>Lorem ipsum dolor sit amet</small></li>
-            <li><small>Lorem ipsum dolor sit amet</small></li>
-            <li><small>Lorem ipsum dolor sit amet</small></li>
-            <li><small>Lorem ipsum dolor sit amet</small></li>
-            <li><small>Lorem ipsum dolor sit amet</small></li>
-            <li id="project"><small>Lorem ipsum dolor sit amet</small></li>
-
-        </ul>
+                    magna aliquam erat volutpat.</p></small>
+            <small><p>Ut wisi enim ad minim veniam, quis nostrud exerci tation
+                    ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+                </p></small>
+            <small><a class="green" href="#">read more</a></small>
+        </div>
     </div>
 </div>
