--- a/views/header.ejs
+++ b/views/header.ejs
@@ -16,10 +16,12 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/slider.css"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/slider2.css"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/contact.css"/>
-<<<<<<< HEAD
-=======
+
+
     <link href="css/thumbnail-gallery.css" rel="stylesheet">
->>>>>>> refs/remotes/origin/anuj
+
+    <link rel="stylesheet" type="text/css" href="css/thumbnail-gallery.css" >
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
