Footer corrected, clients work started

--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -7,23 +7,10 @@
 <!---include navbar-->
 <% include navbar.ejs %> 
 
-<!---include carousel-->    
-<% include carousel.ejs %>
 
-<!---include offers-->
-<% include offers.ejs %>
+<!---include gallery_body-->  
+<% include gallery_body.ejs %>   
 
-<!---include about (acp)-->  
-<% include about.ejs %>
-
-<!---include clients-->  
-<% include clients.ejs %>
-
-<!---include projects-->
-<% include projects.ejs %>   
-
-<!---include contact-->  
-<% include contact.ejs %>
 
 <!---include footer-->  
 <% include footer.ejs %>   
