--- a/views/header.ejs
+++ b/views/header.ejs
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/slider.css"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/slider2.css"/>
     <link rel="stylesheet" type="text/css" href="stylesheets/contact.css"/>
+    <link rel="stylesheet" type="text/css" href="stylesheets/thumbnail-gallery.css" >
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
