--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -21,3 +21,8 @@
 #heading{position: absolute; top: 2px; left: 55px;}
 .header_mobile{height: 50px;}
 .navbar-brand{padding: 2px;}
+.gallery{position: relative; top: 50px; padding-bottom: 80px; text-align: center; margin: auto;}
+.page-header{border: none;}
+.footer_items a{color: white;}
+.footer_items p{color: white; padding: inherit; margin-top: 12px;}
+.social_media{position: relative; left: 25%;}
