--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -21,7 +21,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Gallery <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Kitchen</a></li>
+            <li><a href="/gallery">Kitchen</a></li>
             <li><a href="#">Walls</a></li>
             <li><a href="#">Doors</a></li>
             <li><a href="#">Wardrobes</a></li>
